# pushgate

./: .gitignore  README.md  conftest.py  pyproject.toml
pushgate/: __init__.py
pushgate/handlers/: __init__.py  hook_script_loader.py  hooks_dir_loader.py  push_pipeline.py
pushgate/parsers/: __init__.py  stat_header.py
pushgate/registry/: __init__.py  audit_log.py  hook_registry.py
tests/: test_pushgate_baseline.py
