[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pushgate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-json-report>=1.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pushgate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "__eval_*_sec.py"]
